# practice_cmake

hello_world/: CMakeLists.txt  build.sh
simple_config_file/: CMakeLists.txt
simple_config_file/lib/: CMakeLists.txt
simple_config_file/test/: test1.cc
simple_external_submodule/: CMakeLists.txt  Makefile  README.txt
simple_external_submodule/app/: CMakeLists.txt  main.cc
simple_external_submodule/cmake/: git_submodule.cmake
simple_external_submodule/conf/: config.h.in
simple_external_submodule/lib/: my_lib.h
simple_lib/: CMakeLists.txt
simple_lib_again/: CMakeLists.txt
simple_lib_again/app/: CMakeLists.txt
simple_lib_again/lib/: CMakeLists.txt  my_lib.cc  my_lib.h
simple_lib_again_with_option/: CMakeLists.txt
simple_lib_again_with_option/app/: Makefile  cmake_install.cmake
simple_lib_again_with_option/lib/: CMakeLists.txt  Makefile  cmake_install.cmake
simple_lib_again_with_option/test/: CMakeLists.txt  Makefile  cmake_install.cmake
simple_lib_again_with_variable/: CMakeLists.txt
simple_lib_again_with_variable/app/: CMakeLists.txt  main.cc
simple_source_and_header/app/: CMakeLists.txt  main.cc
simple_source_and_header/conf/: CMakeLists.txt
simple_source_and_header/lib/: CMakeLists.txt  my_lib.cc
simple_source_and_header/test/: CMakeLists.txt
